--- a/WebApiPokemon/appsettings.json
+++ b/WebApiPokemon/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "TargetFramework": "net8.0"
+  "TargetFramework": "net8.0",
+  "ConnectionStrings": {
+    "Oracle": "User Id=rm558782;Password=fiap25;Data Source=oracle.fiap.com.br:1521/orcl"
+  }
 }
