--- a/WebApiBanco/appsettings.json
+++ b/WebApiBanco/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "TargetFramework": "net8.0",
   "ConnectionStrings": {
-    "Oracle": "User Id=rm558782;Password=fiap25;Data Source=oracle.fiap.com.br:1521/orcl"
+    "Oracle": "User Id=;Password=;Data Source=oracle.fiap.com.br:0/orcl"
   },
   "conn": "var conn = builder.Configuration.GetConnectionString(\"Oracle\");builder.Services.AddDbContext<PokemonDbContext>(opt =>opt.UseOracle(conn));"
 }
